@@ -1,3 +1,6 @@
+202402190
+Add option for talkback audio on carousel
+
 202311150
 Add option for ATEM Mini as HDMI Switch
 
